--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <h3>Jackson</h3>
+            <h3>Logo</h3>
         </div>
         <nav>
             <a href="home.html">Home</a>
