change hero paragraph

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="left">
             <h1>I am<br>
                 a Designer</h1>
-            <p>100% html5 bootstrap templates Made<br>by colorlib.com
+            <p>100%  colorlib.com
             </p>
             <button class="button1">DOWNLOAD CV</button>
         </div>
